--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,7 @@ li {
     margin-top: -10px;
     margin-bottom: 82px;
     outline: 1px solid transparent;
+
 }
 
 .skew {
@@ -228,6 +229,7 @@ li {
 .img-fix {
     width: 100%;
     outline: 1px solid transparent;
+    
 }
 
 .about-section {
@@ -533,6 +535,7 @@ footer {
             font-size: 33px;
             margin-top: 0;
             margin-bottom: 0;
+             
         }
         p {
             margin-top: -5px;
@@ -542,4 +545,6 @@ footer {
     }
 }
 
+
+@import "firsttime";
 @import "mediaqueries";
