added new hero img for home page/ worked on questions layout and imgs

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -12,14 +12,14 @@
         height: 550px;
     }
     .first {
-        background-image: url(../images/air3.jpg);
+        background-image: url(../images/girl-air.jpg);
         background-size: cover;
-        background-position: 70%;
+        background-position: 0%;
         background-repeat: no-repeat;
     }
     .second {
-        background-image: url(http://www.alliancewake.com/wp-content/uploads/2011/03/1600x1000fooshee.jpg);
-        background-position: 50% 0;
+        background-image: url(../images/tom.jpg);
+        background-position: 80% ;
     }
     // .third{
     //     background-image: url(../images/ramp-air.jpg);
