--- a/css/_firsttime.scss
+++ b/css/_firsttime.scss
@@ -1,8 +1,25 @@
 @import "color";
 
-.black{
-	color:black;
-}
+
+
+// http://i.ytimg.com/vi/9aMvWCMptEg/maxresdefault.jpg
+// http://www.biyahenglaguna.com/wp-content/uploads/2014/05/IMG_3499-1024x682.jpg
+.questions-hero{
+background-image: url(../images/boots-change2.jpg);
+background-position:top left;
+   
+   }
+
+   .questions-contain{
+   	margin-top:-40px;
+   	h2{
+ 
+   		margin-bottom:40px;
+
+
+   	}
+   }
+
 
 
 
@@ -29,15 +46,19 @@
 
 
 .q5-section {
-	background:black;
+	background:$section-black;
 
 }
 
 
 
 @media (min-width: 992px) {
-.q1-contain{
-	width:80%;
-	margin:0 auto 120px auto ;
+
+   .questions-contain{
+	h3{
+		margin-top:0;
+
+	}
 }
+
 }
