--- a/css/style.scss
+++ b/css/style.scss
@@ -119,7 +119,8 @@ li {
 ====================================================*/
 
 .all-padding {
-    padding-top: 120px;
+    padding-top: 140px;
+    padding-bottom:140px;
 }
 
 
@@ -212,9 +213,12 @@ li {
     }
     p {
         text-align: right;
-        margin-top: -60px;
+        margin-top: -10px;
         color: black;
         font-weight: 800;
+          
+            transform: rotate(-10deg);
+            font-size:30px;
     }
 }
 
@@ -235,7 +239,7 @@ li {
 .about-section {
     background-color: #373235;
     margin-top: -50px;
-    padding-bottom: 120px;
+   
     h2 {
         padding-bottom: 30px;
     }
@@ -252,7 +256,7 @@ li {
 
 .wavier-section {
     background: #5eadcb;
-    padding-bottom: 120px;
+   
     p {
         text-align: center;
     }
@@ -269,7 +273,7 @@ li {
     margin-top: -100px;
     background: #334d69;
     border: 1px solid #334d69;
-    padding-bottom: 120px;
+
     h2 {
         padding-bottom: 90px;
     }
@@ -318,7 +322,7 @@ li {
 .rental-section {
     background: #3fa6ad;
     border: 1px solid #3fa6ad;
-    padding-bottom: 120px;
+    
     h2 {
         text-align: center;
         padding-bottom: 90px;
@@ -390,7 +394,7 @@ li {
 .location-section {
     background: #4c4c4c;
     margin-top: -100px;
-    padding-bottom: 120px;
+  
     h2 {
         padding-bottom: 30px;
     }
@@ -414,7 +418,7 @@ li {
 */
 .hours-section {
     background: #96d59e;
-    padding-bottom: 120px;
+ 
     h2 {
         text-align: center;
         padding-bottom: 80px;
@@ -455,7 +459,7 @@ li {
 .programs-section {
     margin-top: -100px;
     background: #373235;
-    padding-bottom: 120px;
+
     h2 {
         margin-bottom: 50px;
     }
@@ -472,7 +476,7 @@ li {
 
 .events-section {
     background: #3fa6ad;
-    padding-bottom: 120px;
+
     h2 {
         margin-bottom: 30px;
     }
